--- a/style.css
+++ b/style.css
@@ -28,6 +28,7 @@ button {
   font-family: "Inter";
   font-weight: 600;
   font-size: 16px;
+  cursor: pointer;
   line-height: 125%;
   border-radius: 7px;
   transition: background-color 0.3s, color 0.3s;
@@ -101,6 +102,7 @@ button:hover {
   justify-content: center;
   margin-bottom: 24px;
   align-items: center;
+  cursor: pointer;
   text-align: center;
   line-height: 64px;
   font-size: 18px;
